--- a/components/WorksBlock/works-block.module.sass
+++ b/components/WorksBlock/works-block.module.sass
@@ -1,5 +1,4 @@
 
-
 .worksBlockContainer
     display: flex
     justify-content: center
@@ -10,10 +9,6 @@
     background: radial-gradient(circle at top right, rgba(44,113,246,.98), black)
 
     .contentContainer
-        display: flex
-        flex-direction: column
-        justify-content: center
-        align-items: center
         position: relative
         color: white
         width: 92%
@@ -22,6 +17,7 @@
         transition: all 0.5s ease-out
         opacity: 0
         transform: scale(0.9)
+        will-change: transform, opacity, box-shadow
 
         &__background
             position: absolute
@@ -31,63 +27,22 @@
             height: 100%
             border-radius: inherit
             background-color: white
-            opacity: 0.17
-            filter: blur(1.2px)
+            opacity: 0.15
             pointer-events: none
+            backface-visibility: hidden
+            perspective: 1000px
+            transform: translateZ(0)
 
-        .glowingContainer
-            position: absolute
-            top: 0
-            left: 0
-            width: 100%
-            height: 100%
-            border-radius: inherit
-            background-color: transparent
-            filter: blur(10px)
-            overflow: hidden
-            pointer-events: none
-
-        &__title
-            position: absolute
-            top: 0
-            left: 0
-            opacity: 0
-            color: #99999d
-            font-weight: bold
-            transform: translate(40%, 0)
-            transition: all 0.5s ease-in-out
-            font-size: 3.5rem
-
-        &__avatar
-            width: 200px
-            height: 200px
-            background-color: #8E2DE2
-            border-radius: 50%
-            color: white
-            display: flex
-            justify-content: center
-            align-items: center
-
-        &__description
-            margin-top: 50px
-            font-size: 1.5rem
-            width: 60%
-            text-align: center
-
+            &.blur
+                filter: blur(1.2px)
 
 
     &.animate
-
         .contentContainer
             transition: all 0.5s ease-in
             opacity: 1
-            transform: scale(1)
+            transform: scale(1) translateZ(0)
             box-shadow: 5px 5px 50px rgba(0, 0, 0, 0.5)
-
-            &:hover
-                .contentContainer__title
-                    opacity: 1
-                    transform: translate(40%, -30%)
 
 
 
